added image for home page

--- a/ArtMagicWeb88/ArtMagicWeb88.csproj
+++ b/ArtMagicWeb88/ArtMagicWeb88.csproj
@@ -124,6 +124,12 @@
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
+    <Content Include="img\best2016.jpg" />
+    <Content Include="img\best2017.jpg" />
+    <Content Include="img\best2018.jpg" />
+    <Content Include="img\best2019.jpg" />
+    <Content Include="img\best2020.jpg" />
+    <Content Include="img\best2021.jpg" />
     <Content Include="img\welcome.jpg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
