--- a/ArtMagicWeb88/ArtMagicWeb88.csproj
+++ b/ArtMagicWeb88/ArtMagicWeb88.csproj
@@ -106,6 +106,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="AboutUs.aspx" />
+    <Content Include="App_Data\ArtMagicWebDB.mdf" />
+    <Content Include="App_Data\ArtMagicWebDB_log.ldf">
+      <DependentUpon>ArtMagicWebDB.mdf</DependentUpon>
+    </Content>
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -217,9 +221,7 @@
       <DependentUpon>ViewSwitcher.ascx</DependentUpon>
     </Compile>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="App_Data\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
