--- a/ArtMagicWeb88/Web.config
+++ b/ArtMagicWeb88/Web.config
@@ -4,6 +4,14 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <!--
+    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
+
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.8" />
+      </system.Web>
+  -->
   <connectionStrings>
     <add name="ConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\test.mdf;Integrated Security=True"
       providerName="System.Data.SqlClient" />
