--- a/ArtMagicWeb88/Web.config
+++ b/ArtMagicWeb88/Web.config
@@ -12,6 +12,10 @@
         <httpRuntime targetFramework="4.8" />
       </system.Web>
   -->
+  <connectionStrings>
+    <add name="ConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\ArtMagicWeb.mdf;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.8"/>
     <httpRuntime targetFramework="4.7.2"/>
