--- a/ArtMagicWeb88/ArtMagicWeb88.csproj
+++ b/ArtMagicWeb88/ArtMagicWeb88.csproj
@@ -264,9 +264,10 @@
       <DependentUpon>ViewArts.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="ViewArts.aspx.designer.cs"/>
+    <Compile Include="ViewArts.aspx.designer.cs">
       <DependentUpon>ViewArts.aspx</DependentUpon>
-
+    </Compile>
+    
     <Compile Include="testing1234.aspx.cs">
       <DependentUpon>testing1234.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
