--- a/ArtMagicWeb88/ArtMagicWeb88.csproj
+++ b/ArtMagicWeb88/ArtMagicWeb88.csproj
@@ -125,6 +125,7 @@
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
+    <Content Include="HomePage.aspx" />
     <Content Include="LoginPage.aspx" />
     <Content Include="RegisterPage.aspx" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
@@ -188,6 +189,13 @@
     </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
+    <Compile Include="HomePage.aspx.cs">
+      <DependentUpon>HomePage.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="HomePage.aspx.designer.cs">
+      <DependentUpon>HomePage.aspx</DependentUpon>
     </Compile>
     <Compile Include="LoginPage.aspx.cs">
       <DependentUpon>LoginPage.aspx</DependentUpon>
