--- a/ArtMagicWeb88/ArtMagicWeb88.csproj
+++ b/ArtMagicWeb88/ArtMagicWeb88.csproj
@@ -107,9 +107,9 @@
   <ItemGroup>
     <Content Include="AboutUs.aspx" />
     <Content Include="add.aspx" />
-    <Content Include="App_Data\ArtMagicWebDB.mdf" />
-    <Content Include="App_Data\ArtMagicWebDB_log.ldf">
-      <DependentUpon>ArtMagicWebDB.mdf</DependentUpon>
+    <Content Include="App_Data\Database1.mdf" />
+    <Content Include="App_Data\Database1_log.ldf">
+      <DependentUpon>Database1.mdf</DependentUpon>
     </Content>
     <Content Include="checkOut.aspx" />
     <Content Include="Content\bootstrap-theme.css" />
@@ -129,6 +129,7 @@
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
+    <Content Include="WishList.aspx" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="img\art1.jpg" />
     <Content Include="img\art2.jpg" />
@@ -250,6 +251,13 @@
     </Compile>
     <Compile Include="ViewSwitcher.ascx.designer.cs">
       <DependentUpon>ViewSwitcher.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="WishList.aspx.cs">
+      <DependentUpon>WishList.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WishList.aspx.designer.cs">
+      <DependentUpon>WishList.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup />
