--- a/ArtMagicWeb88/ArtMagicWeb88.csproj
+++ b/ArtMagicWeb88/ArtMagicWeb88.csproj
@@ -129,6 +129,7 @@
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
+    <Content Include="img\logo.png" />
     <Content Include="WishList.aspx" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="img\art1.jpg" />
