--- a/ArtMagicWeb88/ArtMagicWeb88.csproj
+++ b/ArtMagicWeb88/ArtMagicWeb88.csproj
@@ -107,13 +107,16 @@
     <Content Include="App_Data\ArtMagicWeb_log.ldf">
       <DependentUpon>ArtMagicWeb.mdf</DependentUpon>
     </Content>
+    <Content Include="ArtLoginPage.aspx" />
     <Content Include="Contact.aspx" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Site.css" />
-    <Content Include="Default.aspx" />
+    <Content Include="css\loginPage.css" />
+    <Content Include="CustomerLoginPage.aspx" />
+    <Content Include="CustomerRegisterPage.aspx" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -126,8 +129,24 @@
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="HomePage.aspx" />
-    <Content Include="LoginPage.aspx" />
-    <Content Include="RegisterPage.aspx" />
+    <Content Include="img\art1.jpg" />
+    <Content Include="img\art2.jpg" />
+    <Content Include="img\art3.jpg" />
+    <Content Include="img\art4.jpg" />
+    <Content Include="img\art5.jpg" />
+    <Content Include="img\art6.jpg" />
+    <Content Include="img\ArtMagic logo.jpeg" />
+    <Content Include="img\best2014.jpg" />
+    <Content Include="img\best2015.jpg" />
+    <Content Include="img\best2016.jpg" />
+    <Content Include="img\best2017.jpg" />
+    <Content Include="img\best2018.jpg" />
+    <Content Include="img\best2019.jpg" />
+    <Content Include="img\best2020.jpg" />
+    <Content Include="img\best2021.jpg" />
+    <Content Include="img\homepage_banner.png" />
+    <Content Include="img\welcome.jpg" />
+    <Content Include="ArtistRegisterPage.aspx" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -173,6 +192,13 @@
       <DependentUpon>About.aspx</DependentUpon>
     </Compile>
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="ArtLoginPage.aspx.cs">
+      <DependentUpon>ArtLoginPage.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ArtLoginPage.aspx.designer.cs">
+      <DependentUpon>ArtLoginPage.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Contact.aspx.cs">
       <DependentUpon>Contact.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -180,12 +206,19 @@
     <Compile Include="Contact.aspx.designer.cs">
       <DependentUpon>Contact.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Default.aspx.cs">
-      <DependentUpon>Default.aspx</DependentUpon>
+    <Compile Include="CustomerLoginPage.aspx.cs">
+      <DependentUpon>CustomerLoginPage.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Default.aspx.designer.cs">
-      <DependentUpon>Default.aspx</DependentUpon>
+    <Compile Include="CustomerLoginPage.aspx.designer.cs">
+      <DependentUpon>CustomerLoginPage.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="CustomerRegisterPage.aspx.cs">
+      <DependentUpon>CustomerRegisterPage.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="CustomerRegisterPage.aspx.designer.cs">
+      <DependentUpon>CustomerRegisterPage.aspx</DependentUpon>
     </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -197,12 +230,12 @@
     <Compile Include="HomePage.aspx.designer.cs">
       <DependentUpon>HomePage.aspx</DependentUpon>
     </Compile>
-    <Compile Include="LoginPage.aspx.cs">
-      <DependentUpon>LoginPage.aspx</DependentUpon>
+    <Compile Include="ArtistRegisterPage.aspx.cs">
+      <DependentUpon>ArtistRegisterPage.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="LoginPage.aspx.designer.cs">
-      <DependentUpon>LoginPage.aspx</DependentUpon>
+    <Compile Include="ArtistRegisterPage.aspx.designer.cs">
+      <DependentUpon>ArtistRegisterPage.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Site.Master.cs">
@@ -225,13 +258,6 @@
     </Compile>
     <Compile Include="ViewSwitcher.ascx.designer.cs">
       <DependentUpon>ViewSwitcher.ascx</DependentUpon>
-    </Compile>
-    <Compile Include="RegisterPage.aspx.cs">
-      <DependentUpon>RegisterPage.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="RegisterPage.aspx.designer.cs">
-      <DependentUpon>RegisterPage.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup />
