--- a/ArtMagicWeb88/Web.config
+++ b/ArtMagicWeb88/Web.config
@@ -9,8 +9,8 @@
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
-    <compilation debug="true" targetFramework="4.7.2" />
-    <httpRuntime targetFramework="4.7.2" maxRequestLength="1048576" />
+    <compilation debug="true" targetFramework="4.8"/>
+    <httpRuntime targetFramework="4.7.2"/>
     <pages>
       <namespaces>
         <add namespace="System.Web.Optimization" />
