--- a/ArtMagicWeb88/ArtMagicWeb88.csproj
+++ b/ArtMagicWeb88/ArtMagicWeb88.csproj
@@ -114,6 +114,7 @@
     <Content Include="ArtDetail.aspx" />
     <Content Include="ArtistRegisterPage.aspx" />
     <Content Include="ArtLoginPage.aspx" />
+    <Content Include="checkOut.aspx" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -230,7 +231,13 @@
     <Compile Include="ArtLoginPage.aspx.designer.cs">
       <DependentUpon>ArtLoginPage.aspx</DependentUpon>
     </Compile>
-    <Compile Include="CartItem.cs" />
+    <Compile Include="checkOut.aspx.cs">
+      <DependentUpon>checkOut.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="checkOut.aspx.designer.cs">
+      <DependentUpon>checkOut.aspx</DependentUpon>
+    </Compile>
     <Compile Include="CustomerLoginPage.aspx.cs">
       <DependentUpon>CustomerLoginPage.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
