--- a/ArtMagicWeb88/ArtMagicWeb88.csproj
+++ b/ArtMagicWeb88/ArtMagicWeb88.csproj
@@ -120,6 +120,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Site.css" />
+    <Content Include="css\background.css" />
     <Content Include="css\homepage.css" />
     <Content Include="css\loginPage.css" />
     <Content Include="CustomerLoginPage.aspx" />
